--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -114,6 +114,12 @@ HadoopClusterForm.text.azure.hostname=Host name
 HadoopClusterForm.text.azure.container=Container
 HadoopClusterForm.text.azure.username=User name
 HadoopClusterForm.text.azure.password=Password
+HadoopClusterForm.text.authentication=Authentication mode
+HadoopClusterForm.text.azure.clientId=Client id
+HadoopClusterForm.text.azure.directoryId=Directory ID
+HadoopClusterForm.text.azure.clientKey=Client key
+HadoopClusterForm.text.useHDICertButton=Use client certificate
+HadoopClusterForm.text.azure.clientCertificate=Client certificate
 HadoopClusterForm.text.azure.deployBlob=Deployment Blob
 HadoopClusterForm.check.webHCat.hostname=Host name must be specified
 HadoopClusterForm.check.webHCat.port=Port must be specified
